<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_grey"

    android:orientation="vertical"

    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:scaleType="fitXY"
        android:src="@drawable/thecheezery" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="15dp"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/dusty_white"
        android:textSize="15sp"
        android:textStyle="italic" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
android:id="@+id/button_get_started"
        />

</LinearLayout>